# nvisutils

./: CMakeLists.txt  Makefile  README.md  byte4color.hpp  controls.cpp  controls.hpp  dendmaker.hpp  event.hpp  glutils.hpp  instanced.fragmentshader  instanced.vertexshader  main.cpp  main2.cpp  node.hpp  playback.hpp  property.hpp  renderer.hpp  string_tokenizer.cpp  string_tokenizer.hpp  test.cpp  visdefs.hpp
common/: quaternion_utils.hpp  vboindexer.cpp  vboindexer.hpp
examples/: 20018.el  20018.spk  electeventsettings  elects  elects.events  elects2  elects_shift  eventsettings  mexhat.neurons  mexhat_morph.neurons  morphneurons  multipt_trial0_el0.spk  multipt_trial0_el2.spk  multipt_trial0_el4.spk  neuronprops  neuronpropsstatic  neurons  neurons2  singlept_trial0_el0.spk  singlept_trial0_el2.spk  singlept_trial0_el4.spk  singlept_trial0_el6.spk  trial0_el0.events  trial0_el2.events  trial0_el4.events  trial0_el6.events
scripts/: convcirc.py  convspks.py  makeelectrodes.py  makemovie.sh
